# Fialka-Android

./: .gitignore  .gitmodules  PRIVACY.md  README-en.md  README.md  SECURITY.md  TERMS.md  build.gradle.kts  firebase-rules.json  settings.gradle.kts  storage.rules  version.properties
.github/: dependabot.yml
app/: CMakeLists.txt  build.gradle.kts  google-services.json.template  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fialka_jni.cpp  fialka_jni.h
app/src/main/java/com/fialkaapp/fialka/: AppMode.kt  FialkaApplication.kt  MyFirebaseMessagingService.kt
app/src/main/java/com/securechat/: MyFirebaseMessagingService.kt  SecureChatApplication.kt
app/src/main/res/anim/: bubble_in_received.xml  bubble_in_sent.xml  item_fall_in.xml  shake.xml  slide_down_out.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml  slide_up_in.xml
app/src/main/res/color/: tab_icon_tint.xml
app/src/main/res/drawable/: bg_avatar_ring.xml  bg_badge.xml  bg_brand_orb_primary.xml  bg_brand_orb_secondary.xml  bg_brand_panel.xml  bg_bubble_received.xml  bg_bubble_sent.xml  bg_calc_function.xml  bg_calc_number.xml  bg_calc_operator.xml  bg_calc_zero.xml  bg_circle_option_orange.xml  bg_crypto_badge.xml  bg_fingerprint_card.xml  bg_icon_circle.xml  bg_icon_circle_red.xml  bg_info_box.xml  bg_info_message.xml  bg_key_box.xml  bg_onboarding_gradient.xml  bg_surface_panel.xml  dot_empty.xml  drag_handle.xml  ic_arrow_forward.xml  ic_attach.xml  ic_backspace.xml  ic_check.xml  ic_check_circle.xml  ic_conversation.xml  ic_disguise_calculator.xml  ic_disguise_clock.xml  ic_disguise_notes.xml  ic_disguise_weather.xml  ic_file.xml  ic_fingerprint.xml  ic_flashlight_off.xml  ic_flashlight_on.xml  ic_group.xml  ic_history.xml  ic_language.xml  (+15 more)
app/src/main/res/layout/: activity_cover_calculator.xml  activity_custom_scanner.xml  activity_lock_screen.xml  activity_main.xml  activity_splash.xml  bottom_sheet_attachment.xml  bottom_sheet_cover_secret_setup.xml  bottom_sheet_duration_selector.xml  bottom_sheet_theme_selector.xml  bottom_sheet_xmr_payment.xml  dialog_confirm_send.xml  dialog_payment_request.xml  dialog_xmr_request.xml  dialog_xmr_send.xml  fragment_add_contact.xml  fragment_app_disguise.xml  fragment_backup_export.xml  fragment_backup_import.xml  fragment_backup_phrase.xml  fragment_chat.xml  fragment_conversation_profile.xml  fragment_conversations.xml  fragment_create_group.xml  fragment_donation.xml  fragment_fingerprint.xml  fragment_group_chat.xml  fragment_group_info.xml  fragment_invite_member.xml  fragment_language_selection.xml  fragment_mailbox_dashboard.xml  fragment_mailbox_settings.xml  fragment_mailbox_setup.xml  fragment_mode_choice.xml  fragment_onboarding.xml  fragment_profile.xml  fragment_restore.xml  fragment_seed_verification.xml  fragment_settings.xml  fragment_settings_appearance.xml  fragment_settings_ephemeral.xml  (+39 more)
app/src/main/res/menu/: menu_chat.xml  menu_conversations.xml  menu_message_actions.xml  menu_wallet_bottom.xml  menu_wallet_bottom_nav.xml  menu_wallet_home.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_disguise_calc.xml  ic_launcher_disguise_clock.xml  ic_launcher_disguise_notes.xml  ic_launcher_disguise_weather.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: monero_wordlist.txt
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
docs/: CRYPTO.md  (+4 more)
(+236 files in other folders)
